--- a/frontend/sass/components/_browser.scss
+++ b/frontend/sass/components/_browser.scss
@@ -23,7 +23,6 @@
     border: 1px solid map-get($COLOR-PALETTE, prim);
     margin: 0 auto;
     padding-left: 20px;
-    overflow-x: hidden;
 
     & span {
       white-space: nowrap;
